[PAGOPA-2671] fix: resolved bug on draft-schema utilization
